# source/clients
add_subdirectory(common)
add_subdirectory(qacct)
add_subdirectory(qalter)
add_subdirectory(qconf)
add_subdirectory(qdel)
add_subdirectory(qevent)
add_subdirectory(qhost)
add_subdirectory(qmod)
add_subdirectory(qquota)
add_subdirectory(qrdel)
add_subdirectory(qrsh)
add_subdirectory(qrstat)
add_subdirectory(qrsub)
add_subdirectory(qsh)
add_subdirectory(qstat)
add_subdirectory(qsub)
add_subdirectory(showq)
