#___INFO__MARK_BEGIN_NEW__
###########################################################################
#  
#  Copyright 2023-2024 HPC-Gridware GmbH
#  
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  
#      http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#  
###########################################################################
#___INFO__MARK_END_NEW__

# source/clients
add_subdirectory(common)
add_subdirectory(qacct)
add_subdirectory(qalter)
add_subdirectory(qconf)
add_subdirectory(qdel)
add_subdirectory(qevent)
add_subdirectory(qhost)
add_subdirectory(qmod)
add_subdirectory(qquota)
add_subdirectory(qrdel)
add_subdirectory(qrsh_starter)
add_subdirectory(qrstat)
add_subdirectory(qrsub)
add_subdirectory(qsh)
add_subdirectory(qstat)
add_subdirectory(qsub)
add_subdirectory(showq)
